Correct unnecessary vertical gap in last activity

--- a/resources/sass/pages/_homepage.scss
+++ b/resources/sass/pages/_homepage.scss
@@ -42,9 +42,8 @@
 
 #box-forum {
   #stream-wrapper {
-    @include media-breakpoint-down(xl) {
+    @include media-breakpoint-down(lg) {
       margin-top:            20px;
-      background-position-x: 10px;
       padding-left:          15px;
     }
   }
